--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.11"
 numpy = "^1.26.2"
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.28.0"
+
 [tool.black]
 line-length = 79
 
