--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ numpy = "^1.26.2"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.28.0"
+pre-commit = "^3.6.0"
 
 [tool.black]
 line-length = 79
